[gd_scene load_steps=8 format=3 uid="uid://7h6yabpfcref"]

[ext_resource type="Script" path="res://scripts/ui/TestScreen_1.gd" id="1_r7i6l"]
[ext_resource type="Shader" path="res://assets/shaders/pause_blur.gdshader" id="2_hgd02"]
[ext_resource type="Texture2D" uid="uid://cu6ixjkdbr0ex" path="res://assets/pause_menu/controls.png" id="3_cn87b"]
[ext_resource type="Texture2D" uid="uid://kl2413kab2sy" path="res://assets/pause_menu/controls_1.png" id="4_g22i2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_esw44"]
shader = ExtResource("2_hgd02")
shader_parameter/amount = 1.0

[sub_resource type="SystemFont" id="SystemFont_hc1ms"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[sub_resource type="SpriteFrames" id="SpriteFrames_xggq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cn87b")
}, {
"duration": 1.0,
"texture": ExtResource("4_g22i2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7i6l")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_esw44")
layout_mode = 0
offset_left = -519.0
offset_top = -303.0
offset_right = 1027.0
offset_bottom = 549.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_hc1ms")
theme_override_font_sizes/font_size = 64
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Resume Game"

[node name="Main Menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Exit Game" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/HBoxContainer"]
position = Vector2(-26, 76)
scale = Vector2(0.748438, 0.728472)
sprite_frames = SubResource("SpriteFrames_xggq5")
autoplay = "default"
frame = 1
frame_progress = 1.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
